--- a/playbooks/gce/openshift-cluster/config.yml
+++ b/playbooks/gce/openshift-cluster/config.yml
@@ -8,8 +8,14 @@
   become: no
   vars_files:
   - vars.yml
+  - cluster_hosts.yml
   tasks:
   - set_fact:
+      g_etcd_hosts: "{{ etcd_hosts }}"
+      g_master_hosts: "{{ master_hosts }}"
+      g_node_hosts: "{{ node_hosts }}"
+      g_lb_hosts: "{{ lb_hosts }}"
+      g_nfs_hosts: "{{ nfs_hosts }}"
       g_ssh_user_tmp: "{{ deployment_vars[deployment_type].ssh_user }}"
       g_sudo_tmp: "{{ deployment_vars[deployment_type].sudo }}"
       use_sdn: "{{ do_we_use_openshift_sdn }}"
@@ -17,11 +23,11 @@
 
 - include: ../../common/openshift-cluster/config.yml
   vars:
-    g_etcd_hosts:   "{{ (groups['tag_host-type-etcd']|default([]))   | intersect((groups['tag_env-' ~ cluster_id]|default([]))) }}"
-    g_lb_hosts:     "{{ (groups['tag_host-type-lb']|default([]))     | intersect((groups['tag_env-' ~ cluster_id]|default([]))) }}"
-    g_master_hosts: "{{ (groups['tag_host-type-master']|default([])) | intersect((groups['tag_env-' ~ cluster_id]|default([]))) }}"
-    g_nfs_hosts:   "{{ (groups['tag_host-type-nfs']|default([]))   | intersect((groups['tag_env-' ~ cluster_id]|default([]))) }}"
-    g_node_hosts:   "{{ (groups['tag_host-type-node']|default([]))   | intersect((groups['tag_env-' ~ cluster_id]|default([]))) }}"
+    g_etcd_hosts:   "{{ hostvars.localhost.g_etcd_hosts }}"
+    g_master_hosts: "{{ hostvars.localhost.g_master_hosts }}"
+    g_node_hosts:   "{{ hostvars.localhost.g_node_hosts }}"
+    g_lb_hosts:     "{{ hostvars.localhost.g_lb_hosts }}"
+    g_nfs_hosts:    "{{ hostvars.localhost.g_nfs_hosts }}"
     g_ssh_user: "{{ hostvars.localhost.g_ssh_user_tmp }}"
     g_sudo: "{{ hostvars.localhost.g_sudo_tmp }}"
     g_nodeonmaster: true
