--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -176,7 +176,7 @@
   - restart master api
 
 - set_fact:
-    translated_identity_providers: "{{ openshift_master_identity_providers | translate_idps('v1') }}"
+    translated_identity_providers: "{{ openshift.master.identity_providers | translate_idps('v1') }}"
 
 # TODO: add the validate parameter when there is a validation command to run
 - name: Create master config
