--- a/inventory/byo/hosts.example
+++ b/inventory/byo/hosts.example
@@ -149,6 +149,11 @@ openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 
 # interface other than the default network interface.
 #openshift_node_set_node_ip=True
 
+# Force setting of system hostname when configuring OpenShift
+# This works around issues related to installations that do not have valid dns
+# entries for the interfaces attached to the host.
+#openshift_set_hostname=True
+
 # host group for masters
 [masters]
 ose3-master[1:3]-ansible.test.example.com
