--- a/inventory/byo/hosts.example
+++ b/inventory/byo/hosts.example
@@ -144,6 +144,11 @@ openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 
 # configure how often node iptables rules are refreshed
 #openshift_node_iptables_sync_period=5s
 
+# Configure nodeIP in the node config
+# This is needed in cases where node traffic is desired to go over an
+# interface other than the default network interface.
+#openshift_node_set_node_ip=True
+
 # host group for masters
 [masters]
 ose3-master[1:3]-ansible.test.example.com
