--- a/playbooks/aws/openshift-cluster/addNodes.yml
+++ b/playbooks/aws/openshift-cluster/addNodes.yml
@@ -11,22 +11,6 @@
       msg: Deployment type not supported for aws provider yet
     when: deployment_type == 'enterprise'
 
-  - include: ../../common/openshift-cluster/tasks/set_etcd_launch_facts.yml
-  - include: tasks/launch_instances.yml
-    vars:
-      instances: "{{ etcd_names }}"
-      cluster: "{{ cluster_id }}"
-      type: "{{ k8s_type }}"
-      g_sub_host_type: "default"
-
-  - include: ../../common/openshift-cluster/tasks/set_master_launch_facts.yml
-  - include: tasks/launch_instances.yml
-    vars:
-      instances: "{{ master_names }}"
-      cluster: "{{ cluster_id }}"
-      type: "{{ k8s_type }}"
-      g_sub_host_type: "default"
-
   - include: ../../common/openshift-cluster/tasks/set_node_launch_facts.yml
     vars:
       type: "compute"
@@ -49,10 +33,5 @@
       type: "{{ k8s_type }}"
       g_sub_host_type: "{{ sub_host_type }}"
 
-  - add_host:
-      name: "{{ master_names.0 }}"
-      groups: service_master
-    when: master_names is defined and master_names.0 is defined
-
-- include: update.yml
+- include: scaleup.yml
 - include: list.yml
