addtl aws fixes

--- a/playbooks/aws/openshift-cluster/addNodes.yml
+++ b/playbooks/aws/openshift-cluster/addNodes.yml
@@ -6,6 +6,8 @@
   vars_files:
   - vars.yml
   - ["vars.{{ deployment_type }}.{{ cluster_id }}.yml", vars.defaults.yml]
+  vars:
+    oo_extend_env: True
   tasks:
   - fail:
       msg: Deployment type not supported for aws provider yet
