Fix kubernetes service ip gathering.

--- a/playbooks/common/openshift-master/config.yml
+++ b/playbooks/common/openshift-master/config.yml
@@ -358,11 +358,8 @@
   hosts: oo_first_master
   tasks:
   - name: Get master service ip
-    command: >
-      {{ openshift.common.client_binary }} -n default
-      --config={{ openshift.common.config_base }}/master/admin.kubeconfig
-      get -o template svc kubernetes --template=\\{\\{.spec.clusterIP\\}\\}
-      --output-version=v1
+    # This command has to be on a single line.
+    command: "{{ openshift.common.client_binary }} -n default --config={{ openshift.common.config_base }}/master/admin.kubeconfig get -o template svc kubernetes --template=\\{\\{.spec.clusterIP\\}\\} --output-version=v1"
     register: master_service_ip_output
     when: openshift.common.version_greater_than_3_1_or_1_1 | bool
   - set_fact:
