--- a/roles/openshift_master/tasks/main.yml
+++ b/roles/openshift_master/tasks/main.yml
@@ -81,14 +81,8 @@
   yum: pkg={{ openshift.common.service_type }}-master{{ openshift_version  }} state=present
   register: install_result
 
-# TODO: These values need to be configurable
-- name: Set dns facts
+- name: Re-gather package dependent master facts
   openshift_facts:
-    role: dns
-    local_facts:
-      ip: "{{ openshift_master_cluster_vip | default(openshift.common.ip, true) | default(None) }}"
-      domain: cluster.local
-  when: openshift.master.embedded_dns
 
 - name: Create config parent directory if it does not exist
   file:
