--- a/roles/openshift_registry/tasks/main.yml
+++ b/roles/openshift_registry/tasks/main.yml
@@ -1,14 +1,11 @@
 ---
 # This role is unused until we add options for configuring the backend storage
-
-- set_fact: _oreg_images="--images='{{ openshift.master.registry_url }}'"
-
-- set_fact: _oreg_selector="--selector='{{ openshift.master.registry_selector }}'"
-
 - name: Deploy OpenShift Registry
   command: >
     {{ openshift.common.admin_binary }} registry
-    --create --service-account=registry {{ _oreg_selector }}
-    --credentials={{ openshift_master_config_dir }}/openshift-registry.kubeconfig {{ _oreg_images }}
-  register: _oreg_results
-  changed_when: "'service exists' not in _oreg_results.stdout"
+    --create --service-account=registry
+    --selector='{{ openshift.master.registry_selector }}'
+    --images='{{ openshift.master.registry_url }}'
+    --credentials={{ openshift_master_config_dir }}/openshift-registry.kubeconfig
+  register: registry_results
+  changed_when: "'service exists' not in registry_results.stdout"
