--- a/roles/openshift_router/tasks/main.yml
+++ b/roles/openshift_router/tasks/main.yml
@@ -1,14 +1,10 @@
 ---
-
-- set_fact: _ortr_images="--images='{{ openshift.master.registry_url }}'"
-
-- set_fact: _ortr_selector="--selector='{{ openshift.master.router_selector }}'"
-
 - name: Deploy OpenShift Router
   command: >
     {{ openshift.common.admin_binary }} router
-    --create --replicas={{ openshift.master.infra_nodes }}
-    --service-account=router {{ _ortr_selector }}
-    --credentials={{ openshift_master_config_dir }}/openshift-router.kubeconfig {{ _ortr_images }}
-  register: _ortr_results
-  changed_when: "'service exists' not in _ortr_results.stdout"
+    --create --replicas={{ openshift.master.infra_nodes | length }}
+    --service-account=router --selector='{{ openshift.master.router_selector }}'
+    --images='{{openshift.master.registry_url }}'
+    --credentials={{ openshift_master_config_dir }}/openshift-router.kubeconfig
+  register: router_results
+  changed_when: "'service exists' not in router_results.stdout"
