Infra node fixes
- set router selector in provider playbooks
- rework the infra_nodes variable from a bool to a list of the infra nodes.

--- a/playbooks/gce/openshift-cluster/config.yml
+++ b/playbooks/gce/openshift-cluster/config.yml
@@ -26,5 +26,5 @@
     openshift_debug_level: 2
     openshift_deployment_type: "{{ deployment_type }}"
     openshift_hostname: "{{ gce_private_ip }}"
-    openshift_use_openshift_sdn: "{{ hostvars.localhost.use_sdn  }}"
-    os_sdn_network_plugin_name: "{{ hostvars.localhost.sdn_plugin }}"
+    openshift_router_selector: 'type=infra'
+    osm_infra_nodes: "{{ groups['tag_env-host-type-' ~ cluster_id ~ '-openshift-node'] | intersect(groups['tag_sub-host-type-infra']) }}"
