--- a/playbooks/aws/openshift-cluster/config.yml
+++ b/playbooks/aws/openshift-cluster/config.yml
@@ -22,3 +22,5 @@
     openshift_deployment_type: "{{ deployment_type }}"
     openshift_hostname: "{{ ec2_private_ip_address }}"
     openshift_public_hostname: "{{ ec2_ip_address }}"
+    openshift_router_selector: 'type=infra'
+    osm_infra_nodes: "{{ groups['tag_env-host-type_' ~ cluster_id ~ '-openshift-node'] | intersect(groups['tag_sub-host-type_infra']) }}"
