bring the docker udev workaround into openshift-ansible.git

--- a/roles/docker/handlers/main.yml
+++ b/roles/docker/handlers/main.yml
@@ -2,3 +2,8 @@
 
 - name: restart docker
   service: name=docker state=restarted
+
+- name: restart udev
+  service:
+    name: systemd-udevd
+    state: restarted
