--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -11,3 +11,5 @@
 - name: enable and start the docker service
   service: name=docker enabled=yes state=started
 
+- include: udev_workaround.yml
+  when: docker_udev_workaround | default(False)
