Make the install of openshift_examples optional
* Allows us to make it optional to run the role `openshift_examples`
* Defaults to true

--- a/inventory/byo/hosts.aep.example
+++ b/inventory/byo/hosts.aep.example
@@ -21,6 +21,9 @@ ansible_ssh_user=root
 # deployment type valid values are origin, online, atomic-enterprise, and openshift-enterprise
 deployment_type=atomic-enterprise
 
+# Install the openshift examples
+#openshift_install_examples=true
+
 # Enable cluster metrics
 #use_cluster_metrics=true
 
